--- a/css/main.css
+++ b/css/main.css
@@ -65,8 +65,13 @@ lines .wrap {
 }
 
 .header-text {
-  font-size: 2rem;
+  font-size: 1.2rem;
   color: #fff;
+}
+.main-header-div > p {
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #193b63;
 }
 
 .sponsor-img {
@@ -77,11 +82,6 @@ lines .wrap {
 
 .main-header-div {
   padding: 1rem;
-}
-.main-header-div > p {
-  font-weight: bold;
-  font-size: 2rem;
-  color: #193b63;
 }
 
 .hero-img {
@@ -369,7 +369,7 @@ footer {
 
 footer img {
   width: 100%;
-  margin-top: 500px;
+  margin-top: 80px;
 }
 
 footer .footer {
@@ -505,6 +505,15 @@ anim .main .main-cent .line .load.active {
 }
 
 @media screen and (max-width: 1690px) {
+  .header-text {
+    font-size: 1.2rem;
+    color: #fff;
+  }
+  .main-header-div > p {
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #193b63;
+  }
   .logo {
     width: 150pc;
   }
@@ -685,7 +694,16 @@ anim .main .main-cent .line .load.active {
 
 @media screen and (max-width: 380px) {
   .logo {
-    width: 100px;
+    width: 140px;
+  }
+  .header-text {
+    font-size: 1rem;
+    color: #fff;
+  }
+  .main-header-div > p {
+    font-weight: bold;
+    font-size: 1rem;
+    color: #193b63;
   }
 }
 
@@ -859,6 +877,17 @@ li {
 @media screen and (max-width: 600px) {
   .team-content p {
     font-size: 16px;
+  }
+}
+@media screen and (min-width: 800px) {
+  .header-text {
+    font-size: 2rem;
+    color: #fff;
+  }
+  .main-header-div > p {
+    font-weight: bold;
+    font-size: 2rem;
+    color: #193b63;
   }
 }
 
