--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 
 body {
   color: black;
-  font-family: 'Oswald';
+  font-family: "Oswald";
   margin: 0;
   padding: 0;
   width: 100%;
@@ -67,6 +67,7 @@ lines .wrap {
 .header-text {
   font-size: 1.2rem;
   color: #fff;
+  margin-bottom: 0;
 }
 .main-header-div > p {
   font-weight: bold;
@@ -90,7 +91,7 @@ lines .wrap {
   background-size: cover;
   height: 30vh;
   width: 30vw;
-  background-image: url('assets/logo.png');
+  background-image: url("assets/logo.png");
 }
 
 .bg-main {
@@ -221,7 +222,7 @@ content {
   line-height: 170%;
   width: 680px;
   font-weight: 800;
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   margin-left: 150px;
 }
 
@@ -339,7 +340,7 @@ content {
 }
 
 .track-wrap p {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-size: 15px;
   line-height: 150%;
   font-weight: 600;
@@ -360,7 +361,7 @@ content {
 }
 
 .logo {
-  width: 250px;
+  width: 200px;
 }
 
 footer {
@@ -509,6 +510,7 @@ anim .main .main-cent .line .load.active {
   .header-text {
     font-size: 1.2rem;
     color: #fff;
+    margin-bottom: 0;
   }
   .main-header-div > p {
     font-weight: bold;
@@ -693,17 +695,34 @@ anim .main .main-cent .line .load.active {
   }
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 340px) {
   .logo {
-    width: 140px;
+    width: 80px;
   }
   .header-text {
-    font-size: 1rem;
+    font-size: 1rem !important;
     color: #fff;
+    margin-bottom: 0;
   }
   .main-header-div > p {
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1rem !important;
+    color: #193b63;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .logo {
+    width: 120px;
+  }
+  .header-text {
+    font-size: 1rem !important;
+    color: #fff;
+    margin-bottom: 0;
+  }
+  .main-header-div > p {
+    font-weight: bold;
+    font-size: 1rem !important;
     color: #193b63;
   }
 }
@@ -744,8 +763,8 @@ anim .main .main-cent .line .load.active {
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 18px;
   font-weight: 600;
   padding: 12px 20px;
@@ -787,7 +806,7 @@ anim .main .main-cent .line .load.active {
 }
 
 .team-row .img.right {
-  margin-top: 150px;
+  margin-top: 0;
 }
 
 .img.right .team-content {
@@ -895,12 +914,13 @@ li {
 }
 @media screen and (min-width: 800px) {
   .header-text {
-    font-size: 2rem;
+    font-size: 1.2rem;
     color: #fff;
+    margin-bottom: 0;
   }
   .main-header-div > p {
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 1.2rem;
     color: #193b63;
   }
 }
