--- a/css/main.css
+++ b/css/main.css
@@ -181,13 +181,13 @@ content {
 }
 
 .past-photo{
-  margin-top: 50vh;
+  margin-top: 20vh;
 }
 
 #container-fluid-home
 {
   padding-top: 4vh;
-  width: 50%;
+  width: 70%;
   z-index: 9999;
 }
 
@@ -229,6 +229,7 @@ content {
   color: black;
   font-weight: 700;
   top: 0;
+  margin-left: 5vh;
   -ms-transform: rotate(90deg);
   transform: rotateZ(90deg);
   -webkit-transform: rotateZ(90deg);
