--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,7 @@
   width: 100%;
   height: 100%;
   opacity: 1;
+  background: rgba(0, 0, 0, 0.1);
   -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
 }
