--- a/css/main.css
+++ b/css/main.css
@@ -362,7 +362,7 @@ content {
 .collab {
   font-size: 22px;
   position: absolute;
-  right: 10%;
+  right: 0;
   color: black;
   font-weight: 700;
   top: 15%;
