--- a/css/main.css
+++ b/css/main.css
@@ -230,6 +230,11 @@ lines .wrap {
   left: 0;
 }
 
+marquee{
+  font-size: 170%; 
+  color: red;
+  width:80%;
+}
 .header-text {
   font-size: 1.2rem;
   color: #fff;
@@ -1022,6 +1027,19 @@ anim .main .main-cent .line .load.active {
   }
 }
 
+@media screen and (max-aspect-ratio: 1850/1600) {
+  .car-container-home
+  {
+    display: none;
+  }
+  .main{
+    height: 100%;
+  }
+  .header{
+    height: 60%;
+  }
+}
+
 @media screen and (max-width: 800px){
   .impDates{
     position: absolute;
@@ -1099,6 +1117,10 @@ anim .main .main-cent .line .load.active {
     font-weight: bold;
     font-size: 1rem !important;
     color: #193b63;
+  }
+  marquee{
+    font-size: 100%; 
+    color: red; width:80%;
   }
 
 
