--- a/css/main.css
+++ b/css/main.css
@@ -572,8 +572,8 @@ content {
 }
 
 .sponsors img {
-  width: 180px;
-  display: inline-block;
+  width: 130px;
+  /* display: inline-block; */
   margin: 4vh 0 4vh 0;
   vertical-align: middle;
 }
@@ -590,7 +590,7 @@ content {
 }
 
 .logo {
-  height: 12%;
+  height: 11%;
   position: absolute;
   left: 2%;
   top:3%;
@@ -598,7 +598,7 @@ content {
 }
 
 .logo1 {
-  height: 12%;
+  height: 11%;
   position: absolute;
   right: 3%;
   top:3%;
@@ -874,6 +874,7 @@ anim .main .main-cent .line .load.active {
   .title {
     font-size: 280px;
   }
+
 }
 
 /* @media screen and (max-width: 1590px) {
@@ -959,7 +960,7 @@ anim .main .main-cent .line .load.active {
     width: 90%;
   }
   .sponsors img {
-    width: 200px;
+    width: 120px;
   }
   .jp-img {
     width: 200px;
@@ -1147,6 +1148,7 @@ anim .main .main-cent .line .load.active {
 
 .p-1 {
   padding: 0.25rem !important;
+  font-size: 60px;
 }
 
 .bg-black {
@@ -1366,6 +1368,9 @@ li {
 @media screen and (max-width: 600px) {
   .team-content p {
     font-size: 12px;
+  }
+  .sponsors img {
+    width: 75px;
   }
 }
 @media screen and (min-width: 800px) {
