--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ lines {
 }
 
 lines .wrap {
-  width: 20%;
+  width: 15%;
   border-right: 1.5px solid rgba(0, 0, 0, 0.15);
   height: 100%;
   display: inline-block;
@@ -355,6 +355,11 @@ content {
   margin: 0 auto;
   position: relative;
 }
+.main-wrap .content-speakers {
+  width: 65%;
+  margin: 0 auto;
+  position: relative;
+}
 .carousel-control-prev
 {
   z-index: 9999;
@@ -481,9 +486,9 @@ content {
 }
 
 .team-content h1 {
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 700;
-  color: #8fd9a8;
+  color: #50af70;
 }
 
 .team-content p {
@@ -503,7 +508,7 @@ content {
   margin-top: 30px;
 }
 .judges > h2 {
-  color: #8fd9a8;
+  color: #5fa877;
   font-size: 40px;
 } 
 
@@ -1202,7 +1207,6 @@ anim .main .main-cent .line .load.active {
 .team-row {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
   display: flexbox;
   -ms-flex-line-pack: justify;
   align-content: space-between;
@@ -1326,12 +1330,12 @@ li {
 }
 
 .team-row .img img {
-  max-width: 350px;
+  max-width: 400px;
 }
 
 @media screen and (max-width: 1690px) {
   .team-row .img img {
-    max-width: 275px;
+    max-width: 300px;
   }
 }
 
