--- a/css/main.css
+++ b/css/main.css
@@ -207,13 +207,14 @@ lines .wrap {
   width: 15%;
   border-right: 1.5px solid rgba(0, 0, 0, 0.15);
   height: 100%;
-  display: inline-block;
+  display: inline-block; 
 }
 
 .main {
   height: 150%;
   width: 100%;
   margin: 0 auto;
+  margin-top: 20px;;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -241,6 +242,9 @@ div > marquee{
   color: #fff;
   margin-bottom: 0;
 }
+/* .main-header-div > h1{
+  margin-top: 20px;
+} */
 .main-header-div > p {
   font-weight: bold;
   font-size: 1.2rem;
@@ -257,6 +261,7 @@ div > marquee{
 
 .main-header-div {
   padding: 1rem;
+  margin-top: 1rem;
 }
 
 .hero-img {
@@ -331,7 +336,7 @@ content {
 {
   padding-top: 4vh;
   width: 68%;
-  z-index: 9999;
+  /* z-index: 9999; */
 }
 
 .car-container {
@@ -1219,6 +1224,7 @@ anim .main .main-cent .line .load.active {
 
 .team-row .img {
   max-width: 50%;
+  padding: 0 10px 0;
 }
 
 .team-row .img.right {
